refactor(api): Remove unnecessary import structs and mapping
